# autonomia

./: .devcontainer.json  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README_ADMIN.md  admin.py  alembic.ini  app.py  authorize.py  config.py  dependency.py  docker-compose.yml  logging_config.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  utils.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 561461e64c14_initial_schema.py  56c0a821a9be_initial_migration.py  59fe44a021d6_add_enrich_messages_and_recognize_photo_.py  77f45b6826fc_update_message_model.py  7b1cbbe52f0b_add_media_table.py  894ff7a7479b_remove_events_table.py  9b4e71c8bc90_add_enriched_message_table.py  b4e332b18255_fix_chat_config_foreign_key_constraints.py  ef858959d5ae_add_foreign_keys_to_chat_id.py
api/: __init__.py
api/v1/: __init__.py  health.py  utils.py
jobs/: enrich_old_messages.py  fetch_messages.py  sync_dialogs.py  telethon_hook.py
models/: __init__.py  channel.py  chat.py  chat_config.py  event.py  media.py  message.py  messages_enriched.py  user.py  user_context.py
notebooks/: requirements.txt  setup_jupyter.py
processing/: enrich_message.py
repositories/: __init__.py  channel_repository.py  chat_config_repository.py  chat_repository.py  enriched_message_repository.py  event_repository.py  message_repository.py  user_repository.py
storage/: base.py  local.py  s3.py
templates/: admin_dashboard.html  base.html
tests/: README.md  conftest.py  run_tests.py  test_admin.py  test_basic.py  test_jobs.py  test_models.py  test_processing.py  test_simple.py
utils/: telegram_serializer.py
